--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ var myObstacles = [];
 
 function startGame() {
     myGameArea.start();
-    myGamePiece = new component(50, 50, "letter.png", 10, 120, "image");
+    myGamePiece = new component(50, 50, "letter.svg", 10, 120, "image");
     myBackground = new component(1420, 720, "background.jpg", 0, 0, "image");
 }
 
@@ -130,11 +130,11 @@ function updateGameArea() {
         minHeight = 20;
         maxHeight = 200;
         height = Math.floor(Math.random()*(maxHeight-minHeight+1)+minHeight);
-        minGap = 50;
+        minGap = 60;
         maxGap = 200;
         gap = Math.floor(Math.random()*(maxGap-minGap+1)+minGap);
-        myObstacles.push(new component(10, height, "green", x, 0));
-        myObstacles.push(new component(10, x - height - gap, "green", x, height + gap));
+        myObstacles.push(new component(10, height, "black", x, 0));
+        myObstacles.push(new component(10, x - height - gap, "black", x, height + gap));
     }
     for (i = 0; i < myObstacles.length; i += 1) {
         myObstacles[i].x += -1;
